--- a/vscode/index.html
+++ b/vscode/index.html
@@ -2,9 +2,12 @@
 <html lang="es">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1nal Lap</title>
-
+    <link rel="shortcut icon" href="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
 
 <body>
