--- a/F1nalLap/src/index.html
+++ b/F1nalLap/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>F1nalLap</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>F1nal Lap</title>
+    <link rel="shortcut icon" href="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
