--- a/F1nalLap/src/index.html
+++ b/F1nalLap/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1nal Lap</title>
     <link rel="shortcut icon" href="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.scss">
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
 <body>
