Añadimos libreria Angular Material

--- a/F1nalLap/src/index.html
+++ b/F1nalLap/src/index.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg">
     <link rel="stylesheet" href="styles.scss">
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
   <script src="src/assets/js/barra_deslizante.js"></script>
 </body>
